--- a/播放器_模板.html
+++ b/播放器_模板.html
@@ -262,7 +262,7 @@
         <input type="text" v-model.trim="search" v-focus @keyup.enter="searchMusic" />
       </div>
       <div class="center_con">
-        <div class="song_wrapper">
+        <div class="song_wrapper"  style="overflow: hidden">
           <!-- 添加列表动画效果 -->
           <transition-group name="list" tag="ul" class="song_list" v-on:after-enter="afterEnter">
             <li v-cloak v-for="(item, index) in musicList" :key="index" @click="playMusic(item)" 
@@ -306,6 +306,8 @@
   <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    -->
   <script src="./node_modules/axios/dist/axios.min.js"></script>
+
+  <script src="./lib/iscroll.js"></script>
   <script>
     // const axios= require('axios')
     const vm = new Vue({
@@ -324,11 +326,31 @@
         imgUrl: '',
         //热门评论数组
 
-        commentList:[]
+        commentList:[],
+
+        //定义iscroll 
+        myScroll:undefined,
+
+        leftScroll:undefined
 
 
 
       },
+      mounted() {
+          this.myScroll = new IScroll('.comment_list', {
+            mouseWheel: true,
+            scrollbars: true
+          })
+          this.leftScroll = new IScroll('.song_wrapper', {
+            mouseWheel: true,
+            scrollbars: true
+
+          })
+        },
+        updated() {
+          this.myScroll.refresh()
+          this.leftScroll.refresh()
+        },
       methods: {
         //搜索事件
         searchMusic() {
@@ -400,7 +422,10 @@
             el.focus()
           }
         }
-      }
+      },
+      //数据加载完成后 执行iscroll事件
+     
+
     })
   </script>
 
