--- a/播放器_模板.html
+++ b/播放器_模板.html
@@ -275,11 +275,8 @@
         <input type="text" class="inputTwo" v-model.trim="search" v-focus @keyup.enter="searchMusic" />
       </div>
       <div class="center_con">
-<<<<<<< HEAD
+
         <div class="song_wrapper" style="overflow: hidden">
-=======
-        <div class="song_wrapper">
->>>>>>> parent of 3dc88ef... 增加两侧的滚轮效果 使用iscroll
           <!-- 添加列表动画效果 -->
           <transition-group name="list" tag="ul" class="song_list" v-on:after-enter="afterEnter">
             <li v-cloak v-for="(item, index) in musicList" :key="index" @click="playMusic(item)"
@@ -322,15 +319,11 @@
   <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    -->
   <script src="./node_modules/axios/dist/axios.min.js"></script>
-<<<<<<< HEAD
 
   <script src="./lib/iscroll.js"></script>
 
   <script src="./lib/jquery-1.12.4.js"></script>
   <script src="./jedate-6.5.0(1)/dist/jedate.min.js"></script>
-  
-=======
->>>>>>> parent of 3dc88ef... 增加两侧的滚轮效果 使用iscroll
   <script>
     $(function () {
        
@@ -357,21 +350,20 @@
         imgUrl: '',
         //热门评论数组
 
-<<<<<<< HEAD
+
         commentList: [],
 
         //定义iscroll 
         myScroll: undefined,
 
-        leftScroll: undefined
-=======
+        leftScroll: undefined,
+
         commentList:[]
->>>>>>> parent of 3dc88ef... 增加两侧的滚轮效果 使用iscroll
+//增加两侧的滚轮效果 使用iscroll
 
 
 
       },
-<<<<<<< HEAD
       //页面一开始加载默认数据
       beforeMount() {
         // 获取热搜歌曲
@@ -383,11 +375,6 @@
         console.log(this.search);
 
         // 搜索该热门歌曲
-       
-
-
-
-
       },
       mounted() {
         this.myScroll = new IScroll('.comment_list', {
@@ -406,8 +393,7 @@
         this.myScroll.refresh()
         this.leftScroll.refresh()
       },
-=======
->>>>>>> parent of 3dc88ef... 增加两侧的滚轮效果 使用iscroll
+
       methods: {
         //搜索事件
         searchMusic() {
@@ -479,15 +465,10 @@
             el.focus()
           }
         }
-<<<<<<< HEAD
+
       },
       //数据加载完成后 执行iscroll事件
-
-
-=======
-      }
->>>>>>> parent of 3dc88ef... 增加两侧的滚轮效果 使用iscroll
-    })
+      })
   </script>
 
 </body>
